[gd_scene load_steps=15 format=2]

[ext_resource path="res://Resources/characters_packed.png" type="Texture" id=1]
[ext_resource path="res://Enemies/HitBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/StompEnemy.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 96, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 120, 24, 24, 24 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "falling",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6.99999, 7 )

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.68323, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.666667, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=9]
emission_shape = 2
emission_box_extents = Vector3( 9, 2, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, 2, 0 )
initial_velocity = 20.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 1.0
scale = 4.0
scale_random = 0.5
color = Color( 1, 1, 1, 0.784314 )
color_ramp = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=10]
emission_shape = 2
emission_box_extents = Vector3( 2, 9, 1 )
flag_disable_z = true
gravity = Vector3( 0, 2, 0 )
initial_velocity = 20.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 1.0
scale = 4.0
scale_random = 0.5
color = Color( 1, 1, 1, 0.784314 )
color_ramp = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 2
emission_box_extents = Vector3( 2, 9, 1 )
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
gravity = Vector3( 0, 2, 0 )
initial_velocity = 20.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 1.0
scale = 4.0
scale_random = 0.5
color = Color( 1, 1, 1, 0.784314 )
color_ramp = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=11]
emission_shape = 2
emission_box_extents = Vector3( 9, 2, 1 )
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
gravity = Vector3( 0, 2, 0 )
initial_velocity = 20.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 1.0
scale = 4.0
scale_random = 0.5
color = Color( 1, 1, 1, 0.784314 )
color_ramp = SubResource( 6 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 9, 9 )

[node name="StompEnemy" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "idle"

[node name="HitBox" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 8.80559e-06, -8.99998 )
rotation = -3.14159
shape = SubResource( 4 )

[node name="ParticlesDown" type="Particles2D" parent="."]
position = Vector2( 0, 9 )
emitting = false
amount = 64
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 9 )

[node name="ParticlesLeft" type="Particles2D" parent="."]
position = Vector2( -9, 0 )
emitting = false
amount = 64
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 10 )

[node name="ParticlesRight" type="Particles2D" parent="."]
position = Vector2( 9, 0 )
emitting = false
amount = 64
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 7 )

[node name="ParticlesUp" type="Particles2D" parent="."]
position = Vector2( 0, -9 )
emitting = false
amount = 64
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 11 )

[node name="RayCastDown" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( 0, 10 )

[node name="RayCastLeft" type="RayCast2D" parent="."]
visible = false
rotation = 1.57079
enabled = true
cast_to = Vector2( 0, 10 )

[node name="RayCastRight" type="RayCast2D" parent="."]
visible = false
rotation = -1.57079
enabled = true
cast_to = Vector2( 0, 10 )

[node name="RayCastUP" type="RayCast2D" parent="."]
visible = false
rotation = -3.14159
enabled = true
cast_to = Vector2( 0, 10 )

[node name="CollisionUp" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 8 )
one_way_collision = true

[node name="CollisionLeft" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.5708
shape = SubResource( 8 )
one_way_collision = true

[node name="CollisionRight" type="CollisionShape2D" parent="."]
visible = false
rotation = -1.5708
shape = SubResource( 8 )
one_way_collision = true

[node name="CollisionDown" type="CollisionShape2D" parent="."]
visible = false
rotation = -3.14159
shape = SubResource( 8 )
one_way_collision = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="DownPoint" type="Node2D" parent="."]
visible = false
position = Vector2( 0, 9 )

[node name="LeftPoint" type="Node2D" parent="."]
visible = false
position = Vector2( -9, 0 )

[node name="RightPoint" type="Node2D" parent="."]
visible = false
position = Vector2( 9, 0 )

[node name="UpPoint" type="Node2D" parent="."]
visible = false
position = Vector2( 0, -9 )
